# q-s-fastapi-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/lib/: utils.py
src/tests/: test_handlers.py  test_utils.py
